# stateful_scenes

./: .devcontainer.json  .gitignore  .release-please-manifest.json  .ruff.toml  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  release-please-config.json  requirements.txt  requirements_dev.txt  requirements_test.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: hacs.yaml  hassfest.yaml  lint.yaml  publish_archive.yaml  release-please.yaml  release.yml  test.yaml  test_latest.yaml  validate.yaml
config/: configuration.yaml  scenes.yaml  virtual.yaml
custom_components/stateful_scenes/: StatefulScenes.py  __init__.py  config_flow.py  const.py  discovery.py  helpers.py  manifest.json  number.py  select.py  switch.py
custom_components/stateful_scenes/translations/: en.json  nl.json  sk.json
scripts/: develop  setup
tests/: README.md  __init__.py  conftest.py  const.py  test_config_flow.py  test_discovery.py  test_helpers.py  test_hub.py  test_init.py  test_number.py  test_scene.py  test_select.py  test_stateful_scenes.py  test_switch.py
tests/input/: scenes.yaml
