[project]
name = "stateful-scenes"
version = "1.7.8"
requires-python = ">=3.14"
dependencies = ["homeassistant>=2026.4.4", "aiofiles"]

[tool.setuptools.packages.find]
where = ["custom_components"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
    "pytest-cov",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
